--- a/Film-MVC/views/playfilm.ejs
+++ b/Film-MVC/views/playfilm.ejs
@@ -11,8 +11,8 @@
         <% } %>
     </div>
 
-    <iframe width="1000" height="500" src="https://ok.ru/videoembed/<%= film.episodes[episode-1].url %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <!-- <iframe width="1000" height="500" src="https://ok.ru/videoembed/<%= film.episodes[episode-1].url %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+    <iframe width="1000" height="500" src="<%= film.episodes[episode-1].url %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
