--- a/Film-MVC/views/trash-films.ejs
+++ b/Film-MVC/views/trash-films.ejs
@@ -2,8 +2,8 @@
 
     <div class="mt-4">
         <div style="margin-top: 100px;"">
-            <h3>Danh sách phim của tôi</h3>
-            <a href="/me/trash/films">Thùng rác (<%= deletedCount %>)</a>
+            <h3>Danh sách phim đã xóa</h3>
+            <a href="/me/stored/films">Danh sách phim</a>
         </div>
         
 
@@ -24,13 +24,13 @@
                     <td><%= films[i].category %></td>
                     <td><%= films[i].episodes.length %></td>
                     <td>
-                        <a href="/films/<%= films[i]._id %>/edit" class="btn btn-primary" style="width: 100px;">Edit</a>
+                        <a href="/films/<%= films[i]._id %>/restore" class="btn btn-primary" style="width: 100px;">Restore</a>
 
                         <!-- <form action="/films/<%= films[i]._id %>/delete" method="POST">
                             <button type="submit" class="btn btn-danger" style="margin-top: 10px; width: 100px;">Delete</button>
                         </form> -->
                         <!-- <a type="submit" style="text-decoration: none" href="/films/<%= films[i]._id %>/delete" class="btn btn-link" data-id="<%= films[i]._id %>">Delete</a> -->
-                        <a href="/films/<%= films[i]._id %>/delete" onclick="return confirm('Bạn chắc chắn muốn xóa?');" type="button" class="btn btn-danger">Delete</a>
+                        <a href="/films/<%= films[i]._id %>/forcedelete" onclick="return confirm('Bạn chắc chắn muốn xóa?');" type="button" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
                 <% } %>
